--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -27,18 +27,23 @@ library
   exposed-modules:     Language.ATS.Package
                      , Language.ATS.Package.Exec
                      , Language.ATS.Package.Contents
+                     , Language.ATS.Package.Type
   build-depends:       base >= 4.7 && < 5
                      , htoml-megaparsec
                      , http-client
                      , filemanip
                      , bytestring
+                     , shake
                      , tar
                      , zlib
                      , http-client-tls
+                     , text
                      , directory
                      , optparse-applicative
                      , process
                      , unix
+                     , dhall
+                     , shake-ext >= 0.4.0.1
   default-language:    Haskell2010
   if flag(development)
     ghc-options: -Werror
