--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -1,5 +1,5 @@
 name:                ats-pkg
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            Package manager for ATS
 description:         A collection of scripts to make building ATS projects easy.
 homepage:            https://github.com/vmchale/ats-pkg#readme
@@ -42,7 +42,9 @@ library
                      , process
                      , unix
                      , dhall
-                     , shake-ext >= 0.4.0.1
+                     , mtl
+                     , shake-ext >= 0.4.1.0
+                     , composition-prelude >= 1.1.0.1
   default-language:    Haskell2010
   if flag(development)
     ghc-options: -Werror
@@ -51,7 +53,7 @@ library
 executable atspkg
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-I0
   build-depends:       base
                      , ats-pkg
   default-language:    Haskell2010
@@ -69,16 +71,6 @@ test-suite ats-pkg-test
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
   default-language:    Haskell2010
 
-benchmark ats-pkg-bench
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      bench
-  main-is:             Bench.hs
-  build-depends:       base
-                     , ats-pkg
-                     , criterion
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
-  default-language:    Haskell2010
-
 source-repository head
   type:     git
-  location: https://github.com/vmchale/ats-pkg
+  location: git@github.com:vmchale/atspkg.git
