more packaging stuff added.
Former-commit-id: d2afc1f476fc8a18eb6a4627a5e97e3d66d16177

--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -41,6 +41,7 @@ library
                      , process
                      , parallel-io
                      , unix
+                     , lens
                      , dhall
                      , shake-ext >= 1.1.0.0
                      , composition-prelude >= 1.1.0.1
