--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -1,5 +1,5 @@
 name:                ats-pkg
-version:             1.1.0.2
+version:             1.2.0.0
 synopsis:            Package manager for ATS
 description:         A collection of scripts to make building ATS projects easy.
 homepage:            https://github.com/vmchale/ats-pkg#readme
@@ -47,6 +47,7 @@ library
                      , shake-ext >= 1.2.0.0
                      , composition-prelude >= 1.1.0.1
                      , optparse-applicative
+                     , temporary
   default-language:    Haskell2010
   if flag(development)
     ghc-options: -Werror
