--- a/.travis.yml
+++ b/.travis.yml
@@ -60,9 +60,9 @@ script:
   - |
     if [ `uname` = "Darwin" ]
     then
-      export BINPATH="$(find . -name ats-pkg -perm 755 | tail -n1)"
+      export BINPATH="$(find . -name atspkg -perm 755 | tail -n1)"
     else
-      export BINPATH="$(find -name ats-pkg -executable | tail -n2 | head -n1)"
+      export BINPATH="$(find -name atspkg -executable | tail -n2 | head -n1)"
     fi
   - echo $BINPATH
   - mv $BINPATH ats-pkg-$TARGET
