--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -43,7 +43,8 @@ library
                      , unix
                      , lens
                      , dhall
-                     , shake-ext >= 1.2.0.3
+                     , shake-ats
+                     , shake-ext
                      , composition-prelude >= 1.1.0.2
                      , optparse-applicative
                      , temporary
