--- a/stack.yaml
+++ b/stack.yaml
@@ -3,9 +3,10 @@ resolver: lts-10.3
 packages:
   - '.'
 extra-deps:
-  - shake-ext-1.3.0.1
+  - shake-ext-1.4.0.0
+  - shake-ats-0.1.0.0
   - composition-prelude-1.1.0.2
-  - language-ats-0.1.1.2
+  - language-ats-0.1.1.3
 flags:
   ats-pkg:
     development: false
