--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -1,7 +1,7 @@
 ---
 - functions:
   - {name: unsafePerformIO, within: []}  # unsafePerformIO can appear nowhere
-  - {name: error, within: []}  # throw real errors
+  - {name: error, within: [Language.ATS.Package.Dependency]}  # throw real errors
   - {name: undefined, within: [Language.ATS.PrettyPrint, Language.ATS.Package.Exec]}
   - {name: fromJust, within: []}  # this is hell to track down
   - {name: foldl, within: []}  # foldl has bad properties
