--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -53,7 +53,7 @@ library
                      , composition-prelude >= 1.1.0.2
                      , optparse-applicative
                      , temporary
-                     , lzma
+                     -- , lzma
                      , ansi-wl-pprint
   default-language:    Haskell2010
   if flag(development)
