--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -28,6 +28,7 @@ custom-setup
 library
   hs-source-dirs:      src
   exposed-modules:     Language.ATS.Package.Exec
+                     , Lanugage.ATS.Package
   other-modules:       Paths_ats_pkg
                      , Language.ATS.Package.Error
                      , Language.ATS.Package.Type
