--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -56,6 +56,8 @@ library
                      , optparse-applicative
                      , temporary
                      , ansi-wl-pprint
+                     -- , lzma
+                     -- , bzlib
   default-language:    Haskell2010
   if flag(development)
     ghc-options: -Werror
