--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -37,6 +37,7 @@ library
                      , Language.ATS.Package.Build
   build-depends:       base >= 4.7 && < 5
                      , http-client
+                     , containers
                      , filemanip
                      , bytestring
                      , shake
