--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -1,5 +1,5 @@
 name:                ats-pkg
-version:             2.0.0.4
+version:             2.0.0.6
 synopsis:            Package manager for ATS
 description:         A collection of scripts to make building ATS projects easy.
 homepage:            https://github.com/vmchale/ats-pkg#readme
@@ -51,11 +51,12 @@ library
                      , lens
                      , dhall
                      , shake-ats >= 0.3.0.4
-                     , shake-ext >= 1.4.0.2
+                     , shake-ext >= 1.5.0.0
                      , composition-prelude >= 1.1.0.2
                      , optparse-applicative
                      , temporary
                      , ansi-wl-pprint
+                     , binary
                      -- , lzma
                      -- , bzlib
   default-language:    Haskell2010
@@ -66,7 +67,7 @@ library
 executable atspkg
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-I0
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , ats-pkg
   default-language:    Haskell2010
