--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -48,6 +48,7 @@ library
                      , zlib
                      , http-client-tls
                      , text
+                     , containers
                      , directory
                      , process
                      , parallel-io
@@ -61,6 +62,7 @@ library
                      , temporary
                      , ansi-wl-pprint
                      , binary
+                     , dependency
                      -- , lzma
                      -- , bzlib
   default-language:    Haskell2010
