--- a/stack.yaml
+++ b/stack.yaml
@@ -4,11 +4,12 @@ packages:
   - '.'
 extra-deps:
   - shake-ext-2.3.0.0
-  - shake-ats-1.3.0.2
+  - shake-ats-1.3.0.3
   - composition-prelude-1.1.0.2
   - language-ats-0.2.0.0
   - cli-setup-0.2.0.1
   - hs2ats-0.2.1.3
+  - dependency-0.1.0.0
 flags:
   ats-pkg:
     development: false
