--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -1,6 +1,6 @@
 name:                ats-pkg
-version:             2.2.0.14
-synopsis:            Package manager for ATS
+version:             2.2.0.15
+synopsis:            A build tool for ATS
 description:         A collection of scripts to simplify building ATS projects.
 homepage:            https://github.com/vmchale/atspkg#readme
 license:             BSD3
@@ -8,7 +8,7 @@ license-file:        LICENSE
 author:              Vanessa McHale
 maintainer:          vamchale@gmail.com
 copyright:           Copyright: (c) 2018 Vanessa McHale
-category:            Development
+category:            Development, ATS
 build-type:          Custom
 extra-doc-files:     README.md
                    , docs/manual.tex
@@ -62,6 +62,7 @@ library
                      , ansi-wl-pprint
                      , binary
                      , dependency
+                     , ats-setup
                      -- , lzma
                      -- , bzlib
   default-language:    Haskell2010
