--- a/stack.yaml
+++ b/stack.yaml
@@ -10,6 +10,7 @@ extra-deps:
   - cli-setup-0.2.0.1
   - hs2ats-0.2.1.3
   - dependency-0.1.0.0
+  - ats-setup-0.3.0.2
 flags:
   ats-pkg:
     development: false
