--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -1,5 +1,5 @@
 name:                ats-pkg
-version:             2.2.1.0
+version:             2.2.1.1
 synopsis:            A build tool for ATS
 description:         A collection of scripts to simplify building ATS projects.
 homepage:            https://github.com/vmchale/atspkg#readme
@@ -57,6 +57,7 @@ library
                      , shake-ext >= 2.3.0.0
                      , composition-prelude >= 1.1.0.2
                      , optparse-applicative
+                     , zip-archive
                      , temporary
                      , ansi-wl-pprint
                      , binary
