--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -14,6 +14,7 @@ extra-doc-files:     README.md
                    , docs/manual.tex
 extra-source-files:  stack.yaml
                    , man/atspkg.1
+                   , config.dhall
 cabal-version:       1.18
 
 Flag development {
