--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -56,6 +56,7 @@ library
                      , unix
                      , lens
                      , dhall
+                     , ansi-wl-pprint
                      , shake-ats >= 1.3.0.0
                      , shake-ext >= 2.3.0.0
                      , composition-prelude >= 1.1.0.2
