--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,7 @@
 resolver: lts-10.4
 packages:
   - '.'
+  - 'dependency'
 extra-deps:
   - shake-ext-2.3.0.0
   - shake-ats-1.3.0.6
@@ -9,7 +10,6 @@ extra-deps:
   - language-ats-0.2.0.0
   - cli-setup-0.2.0.1
   - hs2ats-0.2.1.3
-  - dependency-0.1.0.3
   - ats-setup-0.3.0.2
 flags:
   ats-pkg:
