--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ before_install:
   - |
     if [ `uname` = "Darwin" ]
     then
+      brew install lzlib
+      brew install xz
       curl --insecure -L https://www.stackage.org/stack/osx-x86_64 | tar xz --strip-components=1 --include '*/stack' -C ~/.local/bin
     else
       curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
