--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
       - libgmp3-dev
       - xz-utils
       - liblzma-dev
+      - bzip2
 matrix:
   include:
 
@@ -41,6 +42,7 @@ before_install:
     then
       brew install lzlib
       brew install xz
+      brew install bzip2
       curl --insecure -L https://www.stackage.org/stack/osx-x86_64 | tar xz --strip-components=1 --include '*/stack' -C ~/.local/bin
     else
       curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
