--- a/stack.yaml
+++ b/stack.yaml
@@ -3,9 +3,9 @@ resolver: lts-10.4
 packages:
   - '.'
   - 'dependency'
+  - 'shake-ats'
 extra-deps:
   - shake-ext-2.3.0.0
-  - shake-ats-1.3.0.6
   - composition-prelude-1.1.0.2
   - language-ats-0.2.0.0
   - cli-setup-0.2.0.1
