--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -30,6 +30,7 @@ library
                      , shake-ext >= 2.1.0.0
                      , hs2ats >= 0.2.0.1
                      , directory
+                     , microlens
                      , text
                      , dependency
                      , shake
