stack being an idiot again
Former-commit-id: d882a7f1a281e90435faf41437d365a21ecb283f

--- a/stack.yaml
+++ b/stack.yaml
@@ -12,6 +12,7 @@ extra-deps:
   - cli-setup-0.2.0.1
   - ats-setup-0.3.0.2
   - hspec-dirstream-0.3.0.0
+  - dirstream-1.0.3
 flags:
   ats-pkg:
     development: false
