--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -40,10 +40,12 @@ library
                      , Language.ATS.Package.Build
                      , Language.ATS.Package.Upgrade
                      , Language.ATS.Package.Tools
+                     , Language.ATS.Package.Config
                      , Language.ATS.Package.PackageSet
   build-depends:       base >= 4.7 && < 5
                      , http-client
                      , bytestring
+                     , file-embed
                      , shake
                      , bzlib
                      , lzma
