new source file management
Former-commit-id: f17c79a9b36cf2bf76706c669742424ae2e47474

--- a/hs2ats/hs2ats.cabal
+++ b/hs2ats/hs2ats.cabal
@@ -26,8 +26,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , haskell-src-exts
                      , language-ats
-                     , text
-                     , cases
+                     , casing
                      , lens
                      , optparse-generic
                      , ansi-wl-pprint
