--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -29,9 +29,11 @@ library
                      , containers
                      , recursion-schemes
                      , microlens
+                     , transformers
                      , deepseq
                      , binary
                      , deepseq
+                     , tardis
   default-language:    Haskell2010
   if flag(development)
     ghc-options:       -Werror
