--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -25,12 +25,13 @@ library
   other-modules:       Development.Shake.ATS.Type
                      , Development.Shake.ATS.Rules
                      , Development.Shake.ATS.Environment
+                     , Development.Shake.ATS.Generate
   build-depends:       base >= 4.7 && < 5
-                     , language-ats
+                     , language-ats >= 0.3.0.3
                      , shake-ext >= 2.1.0.0
                      , hs2ats >= 0.2.0.1
                      , directory
-                     , microlens
+                     , lens
                      , text
                      , dependency
                      , shake
