--- a/stack.yaml
+++ b/stack.yaml
@@ -6,6 +6,7 @@ packages:
   - 'shake-ats'
   - 'hs2ats'
 extra-deps:
+  - dhall-1.9.2
   - shake-ext-2.5.0.0
   - composition-prelude-1.2.0.1
   - language-ats-0.3.0.4
