--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -1,5 +1,5 @@
 name:                ats-pkg
-version:             2.4.2.22
+version:             2.5.0.0
 synopsis:            A build tool for ATS
 description:         A collection of scripts to simplify building ATS projects.
 homepage:            https://github.com/vmchale/atspkg#readme
@@ -38,6 +38,7 @@ library
                      , Language.ATS.Package.Dependency
                      , Language.ATS.Package.Compiler
                      , Language.ATS.Package.Build
+                     , Language.ATS.Package.Build.IO
                      , Language.ATS.Package.Upgrade
                      , Language.ATS.Package.Config
                      , Language.ATS.Package.PackageSet
@@ -64,14 +65,14 @@ library
                      , ansi-wl-pprint
                      , shake-ats >= 1.3.0.0
                      , shake-ext >= 2.3.0.0
-                     , composition-prelude >= 1.1.0.2
+                     , composition-prelude >= 1.3.0.0
                      , optparse-applicative
                      , zip-archive
                      , temporary
                      , ansi-wl-pprint
                      , binary
                      , dependency
-                     , ats-setup
+                     , ats-setup >= 0.3.1.1
   build-tools:         cpphs
   default-language:    Haskell2010
   if flag(development)
