--- a/hs2ats/hs2ats.cabal
+++ b/hs2ats/hs2ats.cabal
@@ -1,5 +1,5 @@
 name:                hs2ats
-version:             0.2.1.5
+version:             0.2.1.6
 synopsis:            Create ATS types from Haskell types
 description:         This package enables scanning Haskell source files for data types and then generating [ATS](http://www.ats-lang.org/) types from them.
 homepage:            https://github.com/vmchale/hs2ats#readme
@@ -24,7 +24,7 @@ library
                      , Language.ATS.Generate.Error
   build-depends:       base >= 4.7 && < 5
                      , haskell-src-exts
-                     , language-ats
+                     , language-ats >= 1.0.0.0
                      , casing
                      , lens
                      , optparse-generic
