--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -1,95 +1,120 @@
-name:                ats-pkg
-version:             2.5.0.3
-synopsis:            A build tool for ATS
-description:         A collection of scripts to simplify building ATS projects.
-homepage:            https://github.com/vmchale/atspkg#readme
-license:             BSD3
-license-file:        LICENSE
-author:              Vanessa McHale
-maintainer:          vamchale@gmail.com
-copyright:           Copyright: (c) 2018 Vanessa McHale
-category:            Development, ATS
-build-type:          Custom
-extra-doc-files:     README.md
-                   , docs/manual.tex
-extra-source-files:  stack.yaml
-                   , man/atspkg.1
-                   , config.dhall
-cabal-version:       1.18
-
-Flag development {
-  Description: Enable `-Werror`
-  manual: True
-  default: False
-}
-
-custom-setup
-  setup-depends:     base
-                   , Cabal >= 2.0
-                   , cli-setup >= 0.2.0.1
-
-library
-  hs-source-dirs:      src
-  exposed-modules:     Language.ATS.Package.Exec
-                     , Language.ATS.Package
-  other-modules:       Paths_ats_pkg
-                     , Language.ATS.Package.Error
-                     , Language.ATS.Package.Type
-                     , Language.ATS.Package.Dependency
-                     , Language.ATS.Package.Compiler
-                     , Language.ATS.Package.Build
-                     , Language.ATS.Package.Build.IO
-                     , Language.ATS.Package.Upgrade
-                     , Language.ATS.Package.Config
-                     , Language.ATS.Package.PackageSet
-                     , Language.ATS.Package.Dhall
-                     , Quaalude
-  build-depends:       base >= 4.7 && < 5
-                     , http-client
-                     , bytestring
-                     , file-embed
-                     , shake
-                     , bzlib
-                     , lzma
-                     , tar
-                     , zlib
-                     , http-client-tls
-                     , text
-                     , directory
-                     , process
-                     , containers
-                     , parallel-io
-                     , unix
-                     , lens
-                     , dhall
-                     , ansi-wl-pprint
-                     , shake-ats >= 1.3.0.0
-                     , shake-ext >= 2.3.0.0
-                     , composition-prelude >= 1.3.0.0
-                     , optparse-applicative
-                     , zip-archive
-                     , temporary
-                     , ansi-wl-pprint
-                     , binary
-                     , dependency
-                     , ats-setup >= 0.3.1.1
-  build-tools:         cpphs
-  default-language:    Haskell2010
-  if flag(development)
-    ghc-options: -Werror
-  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
-
-executable atspkg
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , ats-pkg
-  default-language:    Haskell2010
-  if flag(development)
-    ghc-options: -Werror
-  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
+cabal-version: 1.18
+name: ats-pkg
+version: 2.5.0.3
+license: BSD3
+license-file: LICENSE
+copyright: Copyright: (c) 2018 Vanessa McHale
+maintainer: vamchale@gmail.com
+author: Vanessa McHale
+homepage: https://github.com/vmchale/atspkg#readme
+synopsis: A build tool for ATS
+description:
+    A collection of scripts to simplify building ATS projects.
+category: Development, ATS
+build-type: Custom
+extra-source-files:
+    stack.yaml
+    man/atspkg.1
+    config.dhall
+extra-doc-files: README.md
+                 docs/manual.tex
 
 source-repository head
-  type:     git
-  location: git@github.com:vmchale/atspkg.git
+    type: git
+    location: git@github.com:vmchale/atspkg.git
+
+custom-setup
+    setup-depends: base,
+                   Cabal >=2.0,
+                   cli-setup >=0.2.0.1
+
+flag development
+    description:
+        Enable `-Werror`
+    default: False
+    manual: True
+
+flag no-executable
+    description:
+        Enable `-Werror`
+    default: False
+
+library
+    exposed-modules:
+        Language.ATS.Package
+    build-tools: cpphs
+    hs-source-dirs: src
+    other-modules:
+        Paths_ats_pkg
+        Language.ATS.Package.Error
+        Language.ATS.Package.Type
+        Language.ATS.Package.Dependency
+        Language.ATS.Package.Compiler
+        Language.ATS.Package.Build
+        Language.ATS.Package.Build.IO
+        Language.ATS.Package.Upgrade
+        Language.ATS.Package.Config
+        Language.ATS.Package.PackageSet
+        Language.ATS.Package.Dhall
+        Quaalude
+    default-language: Haskell2010
+    ghc-options: -Wall -Wincomplete-uni-patterns
+                 -Wincomplete-record-updates -Wcompat
+    build-depends:
+        base >=4.7 && <5,
+        http-client,
+        bytestring,
+        file-embed,
+        shake,
+        bzlib,
+        Cabal >=2.0.0.0,
+        lzma,
+        tar,
+        zlib,
+        http-client-tls,
+        text,
+        directory,
+        process,
+        containers,
+        parallel-io,
+        unix,
+        lens,
+        dhall,
+        ansi-wl-pprint,
+        shake-ats >=1.3.0.0,
+        shake-ext >=2.3.0.0,
+        composition-prelude >=1.3.0.0,
+        zip-archive,
+        ansi-wl-pprint,
+        binary,
+        dependency,
+        ats-setup >=0.3.1.1
+    
+    if flag(development)
+        ghc-options: -Werror
+
+executable atspkg
+    main-is: Main.hs
+    hs-source-dirs: app
+    other-modules:
+        Paths_ats_pkg
+    default-language: Haskell2010
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
+    build-depends:
+        base,
+        ats-pkg,
+        optparse-applicative,
+        lens,
+        shake-ats,
+        temporary,
+        directory,
+        composition-prelude,
+        text,
+        shake
+    
+    if flag(no-executable)
+        buildable: False
+    
+    if flag(development)
+        ghc-options: -Werror
