--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -80,7 +80,7 @@ library
         parallel-io,
         unix,
         lens,
-        dhall,
+        dhall >= 1.10.0,
         ansi-wl-pprint,
         shake-ats >=1.3.0.0,
         shake-ext >=2.3.0.0,
