--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -24,7 +24,7 @@ source-repository head
     location: git@github.com:vmchale/atspkg.git
 
 custom-setup
-    setup-depends: base,
+    setup-depends: base -any,
                    Cabal >=2.0,
                    cli-setup >=0.2.0.1
 
@@ -42,7 +42,7 @@ flag no-executable
 library
     exposed-modules:
         Language.ATS.Package
-    build-tools: cpphs
+    build-tools: cpphs -any
     hs-source-dirs: src
     other-modules:
         Paths_ats_pkg
@@ -63,32 +63,32 @@ library
                  -Wincomplete-record-updates -Wcompat
     build-depends:
         base >=4.7 && <5,
-        http-client,
-        bytestring,
-        file-embed,
-        shake,
-        bzlib,
+        http-client -any,
+        bytestring -any,
+        file-embed -any,
+        shake -any,
+        bzlib -any,
         Cabal >=2.0.0.0,
-        lzma,
-        tar,
-        zlib,
-        http-client-tls,
-        text,
-        directory,
-        process,
-        containers,
-        parallel-io,
-        unix,
-        lens,
-        dhall >= 1.10.0,
-        ansi-wl-pprint,
+        lzma -any,
+        tar -any,
+        zlib -any,
+        http-client-tls -any,
+        text -any,
+        directory -any,
+        process -any,
+        containers -any,
+        parallel-io -any,
+        unix -any,
+        lens -any,
+        dhall >=1.9.0,
+        ansi-wl-pprint -any,
         shake-ats >=1.3.0.0,
         shake-ext >=2.3.0.0,
         composition-prelude >=1.3.0.0,
-        zip-archive,
-        ansi-wl-pprint,
-        binary,
-        dependency,
+        zip-archive -any,
+        ansi-wl-pprint -any,
+        binary -any,
+        dependency -any,
         ats-setup >=0.3.1.1
     
     if flag(development)
@@ -103,16 +103,16 @@ executable atspkg
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                  -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
     build-depends:
-        base,
-        ats-pkg,
-        optparse-applicative,
-        lens,
-        shake-ats,
-        temporary,
-        directory,
-        composition-prelude,
-        text,
-        shake
+        base -any,
+        ats-pkg -any,
+        optparse-applicative -any,
+        lens -any,
+        shake-ats -any,
+        temporary -any,
+        directory -any,
+        composition-prelude -any,
+        text -any,
+        shake -any
     
     if flag(no-executable)
         buildable: False
