--- a/ats-pkg.cabal
+++ b/ats-pkg.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: ats-pkg
-version: 2.6.1.15
+version: 2.7.0.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -42,20 +42,23 @@ flag no-executable
 library
     exposed-modules:
         Language.ATS.Package
+        Distribution.ATS
     hs-source-dirs: src
     other-modules:
         Paths_ats_pkg
-        Language.ATS.Package.Error
-        Language.ATS.Package.Type
-        Language.ATS.Package.Dependency
-        Language.ATS.Package.Compiler
+        Distribution.ATS.Build
         Language.ATS.Package.Build
-        Language.ATS.Package.Build.Cabal
         Language.ATS.Package.Build.IO
-        Language.ATS.Package.Upgrade
+        Language.ATS.Package.Compiler
         Language.ATS.Package.Config
-        Language.ATS.Package.PackageSet
+        Language.ATS.Package.Dependency
         Language.ATS.Package.Dhall
+        Language.ATS.Package.Error
+        Language.ATS.Package.PackageSet
+        Language.ATS.Package.Type
+        Language.ATS.Package.Upgrade
+        Distribution.ATS.Version
+        System.Process.Ext
         Quaalude
     default-language: Haskell2010
     ghc-options: -Wall -Wincomplete-uni-patterns
@@ -78,7 +81,8 @@ library
         containers -any,
         parallel-io -any,
         unix -any,
-        lens -any,
+        microlens -any,
+        microlens-th -any,
         dhall >=1.10.0,
         ansi-wl-pprint -any,
         shake-ats >=1.3.0.0,
@@ -88,7 +92,7 @@ library
         ansi-wl-pprint -any,
         binary -any,
         dependency -any,
-        ats-setup >=0.3.1.1
+        filemanip -any
     
     if flag(development)
         ghc-options: -Werror
@@ -101,17 +105,19 @@ executable atspkg
     default-language: Haskell2010
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                  -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
-    build-depends:
-        base -any,
-        ats-pkg -any,
-        optparse-applicative -any,
-        lens -any,
-        shake-ats -any,
-        temporary -any,
-        directory -any,
-        composition-prelude -any,
-        text -any,
-        shake -any
+    
+    if !flag(no-executable)
+        build-depends:
+            base -any,
+            ats-pkg -any,
+            optparse-applicative -any,
+            microlens -any,
+            shake-ats -any,
+            temporary -any,
+            directory -any,
+            composition-prelude -any,
+            text -any,
+            shake -any
     
     if flag(no-executable)
         buildable: False
