--- a/stack.yaml
+++ b/stack.yaml
@@ -1,19 +1,20 @@
 ---
 resolver: lts-10.7
 packages:
-  - '.'
+  - 'ats-pkg'
+  - 'language-ats'
+  - 'ats-format'
+  - 'shake-ext'
   - 'shake-ats'
   - 'dependency'
+  - 'hsats'
 extra-deps:
   - dhall-1.10.0
-  - shake-ext-2.7.0.0
   - composition-prelude-1.3.0.4
-  - language-ats-1.2.0.1
   - cli-setup-0.2.0.1
   - hspec-dirstream-0.3.0.0
   - dirstream-1.0.3
   - prettyprinter-1.2.0.1
-  - hs2ats-0.2.1.7
 flags:
   ats-pkg:
     development: false
