--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -42,8 +42,7 @@ library
     build-depends:
         base >=4.10 && <5,
         array -any,
-        microlens -any,
-        microlens-th -any,
+        lens -any,
         deepseq -any,
         ansi-wl-pprint >=0.6.8,
         recursion-schemes >=5.0.1,
