--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -41,7 +41,7 @@ library
         shake-ext >=2.7.0.0,
         hs2ats >=0.2.0.1,
         directory -any,
-        microlens -any,
+        lens -any,
         text -any,
         dependency -any,
         shake -any,
