--- a/stack.yaml
+++ b/stack.yaml
@@ -7,7 +7,7 @@ packages:
   - 'shake-ext'
   - 'shake-ats'
   - 'dependency'
-  - 'hsats'
+  - 'hs2ats'
 extra-deps:
   - dhall-1.10.0
   - composition-prelude-1.3.0.4
