--- a/stack.yaml
+++ b/stack.yaml
@@ -15,6 +15,7 @@ extra-deps:
   - hspec-dirstream-0.3.0.0
   - dirstream-1.0.3
   - prettyprinter-1.2.0.1
+  - htoml-megaparsec-1.1.0.1
 flags:
   ats-pkg:
     development: false
