--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-test/data/* linguist-vendored
+language-ats/test/data/* linguist-vendored
+hs2ats/test/data/* linguist-vendored
 *.y linguist-language=Happy
 *.x linguist-language=Alex
