--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -37,6 +37,7 @@ library
     ghc-options: -Wall
     build-depends:
         base >=4.7 && <5,
+        hashable,
         language-ats,
         shake-ext >=2.7.0.0,
         hs2ats >=0.2.0.1,
