--- a/cabal.project
+++ b/cabal.project
@@ -30,7 +30,7 @@ optimization: 2
 with-compiler: ghc-8.2.2
 tests: True
 benchmarks: True
--- documentation: True
+documentation: True
 
 program-options
   happy-options: -gcsa
