--- a/stack.yaml
+++ b/stack.yaml
@@ -12,6 +12,7 @@ extra-deps:
   - composition-prelude-1.3.0.4
   - cli-setup-0.2.0.1
   - hspec-dirstream-0.4.0.0
+  - dirstream-1.0.3
   - htoml-megaparsec-1.1.0.1
 flags:
   ats-pkg:
