--- a/stack.yaml
+++ b/stack.yaml
@@ -10,6 +10,7 @@ packages:
   - 'hs2ats'
 extra-deps:
   - composition-prelude-1.3.0.4
+  - Cabal-2.2.0.0
   - cli-setup-0.2.0.1
   - hspec-dirstream-0.4.0.0
   - dirstream-1.0.3
