--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -79,12 +79,13 @@ library
         text -any,
         directory -any,
         process -any,
-        hashable,
+        hashable -any,
         containers -any,
         parallel-io -any,
         unix -any,
-        lens -any,
-        mtl,
+        microlens -any,
+        microlens-th -any,
+        mtl -any,
         dhall >=1.10.0,
         ansi-wl-pprint -any,
         shake-ats >=1.3.0.0,
@@ -113,7 +114,7 @@ executable atspkg
             base -any,
             ats-pkg -any,
             optparse-applicative -any,
-            lens -any,
+            microlens -any,
             shake-ats -any,
             temporary -any,
             directory -any,
