--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: language-ats
-version: 1.2.0.2
+version: 1.2.0.3
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -31,7 +31,7 @@ flag development
 library
     exposed-modules:
         Language.ATS
-    build-tools: happy >=1.17.1, alex -any
+    build-tools: happy >=1.17.1, alex -any, cpphs -any
     hs-source-dirs: src
     other-modules:
         Language.ATS.Lexer
@@ -43,7 +43,8 @@ library
     build-depends:
         base >=4.10 && <5,
         array -any,
-        lens -any,
+        microlens -any,
+        microlens-th -any,
         deepseq -any,
         ansi-wl-pprint >=0.6.8,
         recursion-schemes >=5.0.1,
