--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: shake-ats
-version: 1.5.0.9
+version: 1.5.0.10
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -37,12 +37,13 @@ library
     ghc-options: -Wall
     build-depends:
         base >=4.7 && <5,
-        hashable,
-        language-ats,
+        hashable -any,
+        language-ats -any,
         shake-ext >=2.7.0.0,
         hs2ats >=0.2.0.1,
         directory -any,
-        lens -any,
+        microlens -any,
+        microlens-th -any,
         text -any,
         dependency -any,
         shake -any,
