--- a/cabal.project
+++ b/cabal.project
@@ -16,7 +16,9 @@ constraints:
   dependency +development,
   hs2ats +development +no-executable
 
-with-compiler: ghc-8.2.2
+allow-newer:
+  Cabal
+
 allow-boot-library-installs: True
 optimization: 2
 tests: True
