--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,5 @@
 ---
-resolver: lts-11.1
+resolver: nightly-2018-03-24
 packages:
   - 'ats-pkg'
   - 'language-ats'
@@ -10,7 +10,10 @@ packages:
   - 'hs2ats'
 extra-deps:
   - composition-prelude-1.3.0.4
-  - Cabal-2.2.0.0
+  - dhall-1.12.0
+  - bzlib-0.5.0.5
+  - casing-0.1.2.1
+# - Cabal-2.2.0.0
   - cli-setup-0.2.0.1
   - hspec-dirstream-0.4.0.0
   - dirstream-1.0.3
