--- a/cabal.project
+++ b/cabal.project
@@ -23,7 +23,7 @@ allow-boot-library-installs: True
 optimization: 2
 tests: True
 benchmarks: True
--- documentation: True
+documentation: True
 
 program-options
   happy-options: -gcsa
