--- a/cabal.project
+++ b/cabal.project
@@ -16,6 +16,9 @@ constraints:
   dependency +development,
   hs2ats +development +no-executable
 
+allow-newer:
+  megaparsec
+
 allow-boot-library-installs: True
 optimization: 2
 tests: True
